foodoutlets more solutions